force-app/main/default/objects/GST__c/GST__c.object-meta.xml
<CustomObject>
    <label>GST</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>GST Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GSTs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>