force-app/main/default/objects/GST__c/fields/ARTL_Address__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Address__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Address</label>
    <type>Address</type>
</CustomField>