force-app/main/default/objects/GST__c/fields/ARTL_Dty_GST_API_Response__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Dty_GST_API_Response__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Dty GST API Response</label>
    <length>255</length>
    <type>Text</type>
</CustomField>