force-app/main/default/objects/GST__c/fields/ARTL_GST_State_Code__c.field-meta.xml
<CustomField>
    <fullName>ARTL_GST_State_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>GST State Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>