force-app/main/default/objects/GST__c/fields/ARTL_GST_Type__c.field-meta.xml
<CustomField>
    <fullName>ARTL_GST_Type__c</fullName>
    <formula>CASE(
    ARTL_Dty_GST_API_Response__c,
    &apos;Regular&apos;, &apos;Non-SEZ&apos;,
    &apos;SEZ&apos;, &apos;SEZ&apos;,
    &apos;SEZ Unit&apos;, &apos;SEZ&apos;,
    &apos;UIN&apos;, &apos;UIN&apos;,
    &apos;Tax Deductor&apos;,&apos;Tax Deductor&apos;,
    &apos;&apos;
)</formula>
    <label>GST Type</label>
    <type>Text</type>
</CustomField>