force-app/main/default/objects/GST__c/fields/Standard_Reason__c.field-meta.xml
<CustomField>
    <fullName>Standard_Reason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Standard Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>