force-app/main/default/objects/GST__c/validationRules/ARTL_GSTNumber.validationRule-meta.xml
<ValidationRule>
    <fullName>ARTL_GSTNumber</fullName>
    <active>true</active>
    <description>GST Name Pattern SFDC-3494</description>
    <errorConditionFormula>OR(NOT(REGEX( Name , &quot;[0-9]{2}[A-Za-z]{5}[0-9]{4}[A-z]{1}[0-9]{1}Z[A-Za-z0-9]{1}&quot;)), MID(Name, 3, 10) &lt;&gt;  Account__r.ARTL_PAN__c  , LEN(Name)&lt;&gt;15)</errorConditionFormula>
    <errorMessage>GST number does not contain the business account PAN Number.</errorMessage>
</ValidationRule>