force-app/main/default/objects/GST__c/validationRules/ARTL_GSTNumberEditValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>ARTL_GSTNumberEditValidation</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISNEW()) &amp;&amp; ISCHANGED(Name) &amp;&amp; $Profile.Name &lt;&gt; &apos;System Administrator&apos;</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>You don&apos;t have sufficient permissions to edit the GST Number. Contact your administrator.</errorMessage>
</ValidationRule>